integration spec passes.

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,10 +1,10 @@
 <h2>Check to see if two words are anagrams, antigrams or palindromes</h2>
-<form action="/results">
-  <div class="form-group">
-    <label for="word" class="form-control">Put a word in here:</label>
-    <input type="text" name="word" class="form-control">
-    <label for="compare" class="form-control">Put another word in here:</label>
-    <input type="text" name="compare" class="form-control">
-    <button type="button" name="button">Check</button>
+<form action='/results'>
+  <div class='form-group'>
+    <label for='word'>Put a word in here:</label>
+    <input type='text' name='word' id='word' class='form-control'>
+    <label for='compare'>Put another word in here:</label>
+    <input type='text' name='compare' id='compare' class='form-control'>
   </div>
+  <button type='submit' name='Check' class='btn btn-primary'>Check</button>
 </form>
