--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,4 @@
-<h2>Check to see if two words are anagrams, antigrams or palindromes</h2>
+<h2>Use the fields below to check to see if two words are anagrams, antigrams or palindromes.</h2>
 <form action='/results'>
   <div class='form-group'>
     <label for='word'>Put a word in here:</label>
@@ -6,5 +6,5 @@
     <label for='compare'>Put another word in here:</label>
     <input type='text' name='compare' id='compare' class='form-control'>
   </div>
-  <button type='submit' name='Check' class='btn btn-primary'>Check</button>
+  <button type='submit' name='Check' class='btn btn-success'>Check</button>
 </form>
