--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,9 +3,11 @@
   <head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css" type="text/css" media="screen" charset="utf-8">
+    <link href="https://fonts.googleapis.com/css?family=Roboto|Sigmar+One" rel="stylesheet">
     <meta charset="utf-8">
     <title>Anagrams, and Antigrams, and Palindromes, Oh My!</title>
   </head>
+  <img src="img/yellow_brick_road.jpg" id="bg-img">
   <body>
     <div class="container">
       <div class="jumbotron">
