update README.me no known bugs. update anagrams.rb file to include check of multiple words. spec will now pass. update index page to add phrases.

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,9 +1,9 @@
-<h2>Use the fields below to check to see if two words are anagrams, antigrams or palindromes.</h2>
+<h2>Use the fields below to check to see if two words or phrases are anagrams, antigrams or palindromes.</h2>
 <form action='/results'>
   <div class='form-group'>
-    <label for='word'>Put a word in here:</label>
+    <label for='word'>Put a word or phrase in here:</label>
     <input type='text' name='word' id='word' class='form-control'>
-    <label for='compare'>Put another word in here:</label>
+    <label for='compare'>Put another word or phrase in here:</label>
     <input type='text' name='compare' id='compare' class='form-control'>
   </div>
   <button type='submit' name='Check' class='btn btn-success'>Check</button>
